# npa

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/npa-api/: Cargo.toml
crates/npa-api/src/: adapter.rs  advanced_ai.rs  ai_search.rs  current.rs  diagnostic.rs  human.rs  human_ide.rs  independent_checker.rs  lib.rs  package_artifacts.rs  package_verifier.rs  phase7.rs  phase8.rs  phase9.rs  projection.rs  prompt.rs  renderer.rs  replay.rs  search.rs  session.rs  snapshot.rs  std_library.rs  tactic.rs  theorem_graph.rs  types.rs  validation.rs  verify.rs
crates/npa-cli/: Cargo.toml
crates/npa-cli/src/: args.rs  diagnostic.rs  lib.rs  main.rs  package.rs  package_artifacts.rs  package_axiom_report.rs  package_build.rs  package_export_summary.rs  package_gate_plan.rs  package_high_trust.rs  package_index.rs  package_publish.rs  package_verify.rs
crates/npa-cli/tests/: package_axiom_report.rs  package_build_certs_check.rs  package_build_certs_write.rs  package_cli.rs  package_cli_args.rs  package_cli_diagnostics.rs  package_export_summary.rs  package_gate_plan.rs  package_import_fixture.rs  package_index.rs  package_timings.rs  package_verify_certs.rs
develop/: README.md  ai-authoring-loop-performance-notes.md  community-library-roadmap-clr-00-todo.md  community-library-roadmap-clr-01-todo.md  community-library-roadmap-clr-02-todo.md  community-library-roadmap-clr-03-todo.md  community-library-roadmap-clr-04-todo.md  community-library-roadmap-clr-05-todo.md  community-library-roadmap-clr-06-todo.md  community-library-roadmap-clr-07-todo.md  community-library-roadmap-clr-08-todo.md  community-library-roadmap-clr-09-todo.md  community-library-roadmap-clr-10-todo.md  community-library-roadmap-todo.md  community-library-roadmap.md  core-spec-v0.1.md  internal-readme-notes-ja.md  npa-checker-ext-ocaml-todo.md  npa-checker-ext-ocaml.md  npa-mathlib-analysis-derivative-closure-audit.md  npa-mathlib-analysis-fixed-point-closure-audit.md  npa-mathlib-analysis-implicit-function-closure-audit.md  npa-mathlib-analysis-inverse-function-closure-audit.md  npa-mathlib-analysis-linear-map-closure-audit.md  npa-mathlib-analysis-metric-topology-closure-audit.md  npa-mathlib-analysis-normed-space-closure-audit.md  npa-mathlib-analysis-riemann-calculus-defer-audit.md  npa-mathlib-field-basic-closure-audit.md  npa-mathlib-geometry-pythagorean-closure-audit.md  npa-mathlib-inner-product-closure-audit.md  npa-mathlib-layer1-closure-audit.md  npa-mathlib-layer2a-closure-audit.md  npa-mathlib-layer2b-closure-audit.md  npa-mathlib-layer3a-closure-audit.md  npa-mathlib-layer3b-closure-audit.md  npa-mathlib-layer3c-subgroup-order-closure-audit.md  npa-mathlib-layer3d-b-quotient-foundation-closure-audit.md  npa-mathlib-layer3d-c-first-isomorphism-closure-audit.md  npa-mathlib-layer3d-d-normal-quotient-closure-audit.md  npa-mathlib-layer3d-e-second-isomorphism-closure-audit.md  (+52 more)
doc/: README.md  community-library-roadmap-clr-00-todo.md  community-library-roadmap-clr-01-todo.md  community-library-roadmap-clr-02-todo.md  community-library-roadmap-clr-03-todo.md  community-library-roadmap-clr-04-todo.md  community-library-roadmap-clr-05-todo.md  community-library-roadmap-clr-06-todo.md  community-library-roadmap-clr-07-todo.md  community-library-roadmap-clr-08-todo.md  community-library-roadmap-clr-09-todo.md  community-library-roadmap-clr-10-todo.md  community-library-roadmap-todo.md  community-library-roadmap.md  core-spec-v0.1.md  external-theorem-library-ci.md  index.md  internal-readme-notes-ja.md  npa-checker-ext-ocaml-todo.md  npa-checker-ext-ocaml.md  npa-mathlib-public-release-plan.md  npa-standalone-repo-activation.md  npa-toolchain-reference-v0.1.0.md  npa-toolchain-reference-v0.1.1.md  overall-design.md  phase0.md  phase1.md  phase2-todo.md  phase2.md  phase3-ai.md  phase3-human-todo.md  phase3-human.md  phase3.md  phase4-ai.md  phase4-human-todo.md  phase4-human.md  phase4.md  phase5-ai.md  phase5-human-todo.md  phase5-human.md  (+18 more)
docs/: README.md  (+2 more)
tools/npa-web/: Cargo.toml  README.md
tools/npa-web/src/: lib.rs  main.rs  package_fixture.rs  render.rs  routes.rs  state.rs  std_demo.rs  style.rs
tools/npa-web/templates/: page.html  verify.html  workspace.html
tools/proof-corpus/: Cargo.toml
tools/proof-corpus/src/: main.rs
tools/proof-corpus/tests/: ai_proof_artifacts.rs  manifest_package_audit.rs
(+3607 files in other folders)
