[workspace]
members = [
    "crates/npa-kernel",
    "crates/npa-cert",
    "crates/npa-checker-ref",
    "crates/npa-frontend",
    "crates/npa-api",
    "crates/npa-tactic",
    "tools/proof-corpus",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/finitefield-org/npa"
