[workspace]
members = [
    "crates/npa-kernel",
    "crates/npa-cert",
    "crates/npa-package",
    "crates/npa-checker-ref",
    "crates/npa-frontend",
    "crates/npa-api",
    "crates/npa-tactic",
    "crates/npa-cli",
    "tools/proof-corpus",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/finitefield-org/npa"
