[package]
name = "npa-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
npa-cert = { path = "../npa-cert" }
npa-frontend = { path = "../npa-frontend" }
npa-kernel = { path = "../npa-kernel" }
npa-tactic = { path = "../npa-tactic" }
sha2 = "0.10"
