[package]
name = "npa-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "npa"
path = "src/main.rs"

[dependencies]
npa-cert = { path = "../npa-cert" }
npa-frontend = { path = "../npa-frontend" }
npa-package = { path = "../npa-package" }
