[workspace]
members = ["."]
resolver = "2"

[package]
name = "npa-web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/finitefield-org/npa"

[dependencies]
npa-api = { path = "../../crates/npa-api" }
npa-cert = { path = "../../crates/npa-cert" }
npa-frontend = { path = "../../crates/npa-frontend" }
npa-tactic = { path = "../../crates/npa-tactic" }

axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
go_html_template = "0.2"
ironframe = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
