[package]
name = "npa-proof-corpus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
npa-cert = { path = "../../crates/npa-cert" }
npa-frontend = { path = "../../crates/npa-frontend" }
npa-kernel = { path = "../../crates/npa-kernel" }
npa-package = { path = "../../crates/npa-package" }
sha2 = "0.10"

[dev-dependencies]
npa-api = { path = "../../crates/npa-api" }
toml = "0.8"
